deploy/auto-deployment/secrets-and-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bold-services
