deploy/auto-deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id-web-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: id-web
  replicas: 1
  template:
    metadata:
      labels:
        app: id-web
    spec:
      containers:
      - name: id-web-container
        image: gcr.io/boldbi-294612/bold-identity:5.3.83
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: id-web-volume
        - mountPath: /application/idp/web/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: id-web-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id-api-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: id-api
  replicas: 1
  template:
    metadata:
      labels:
        app: id-api
    spec:
      containers:
      - name: id-api-container
        image: gcr.io/boldbi-294612/bold-identity-api:5.3.83
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: id-api-volume
        - mountPath: /application/idp/api/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: id-api-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id-ums-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: id-ums
  replicas: 1
  template:
    metadata:
      labels:
        app: id-ums
    spec:
      containers:
      - name: id-ums-container
        image: gcr.io/boldbi-294612/bold-ums:5.3.83
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: id-ums-volume
        - mountPath: /application/idp/ums/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: id-ums-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi-web-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: bi-web
  replicas: 1
  template:
    metadata:
      labels:
        app: bi-web
    spec:
      containers:
      - name: bi-web-container
        image: gcr.io/boldbi-294612/boldbi-server:5.3.83
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: bi-web-volume
        - mountPath: /application/bi/web/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: bi-web-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi-api-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: bi-api
  replicas: 1
  template:
    metadata:
      labels:
        app: bi-api
    spec:
      containers:
      - name: bi-api-container
        image: gcr.io/boldbi-294612/boldbi-server-api:5.3.83
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: bi-api-volume
        - mountPath: /application/bi/api/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: bi-api-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi-jobs-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: bi-jobs
  replicas: 1
  template:
    metadata:
      labels:
        app: bi-jobs
    spec:
      containers:
      - name: bi-jobs-container
        image: gcr.io/boldbi-294612/boldbi-server-jobs:5.3.83
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: bi-jobs-volume
        - mountPath: /application/bi/jobs/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: bi-jobs-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi-dataservice-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: bi-dataservice
  replicas: 1
  template:
    metadata:
      labels:
        app: bi-dataservice
    spec:
      containers:
      - name: bi-dataservice-container
        image: gcr.io/boldbi-294612/boldbi-designer:5.3.83
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: bi-dataservice-volume
        - mountPath: /application/bi/dataservice/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: bi-dataservice-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: v1
kind: Service
metadata:
  name: id-web-service
  namespace: bold-services
  labels:
    app: id-web
spec:
  type: NodePort
  ports:
  - name: id-web-port
    port: 6000
    targetPort: 80
    protocol: TCP
  selector:
    app: id-web
---
apiVersion: v1
kind: Service
metadata:
  name: id-api-service
  namespace: bold-services
  labels:
    app: id-api
spec:
  type: NodePort
  ports:
  - name: id-api-port
    port: 6001
    targetPort: 80
    protocol: TCP
  selector:
    app: id-api
---
apiVersion: v1
kind: Service
metadata:
  name: id-ums-service
  namespace: bold-services
  labels:
    app: id-ums
spec:
  type: NodePort
  ports:
  - name: id-ums-port
    port: 6002
    targetPort: 80
    protocol: TCP
  selector:
    app: id-ums
---
apiVersion: v1
kind: Service
metadata:
  name: bi-web-service
  namespace: bold-services
  labels:
    app: bi-web
spec:
  type: NodePort
  ports:
  - name: bi-web-port
    port: 6004
    targetPort: 80
    protocol: TCP
  selector:
    app: bi-web
---
apiVersion: v1
kind: Service
metadata:
  name: bi-api-service
  namespace: bold-services
  labels:
    app: bi-api
spec:
  type: NodePort
  ports:
  - name: bi-api-port
    port: 6005
    targetPort: 80
    protocol: TCP
  selector:
    app: bi-api
---
apiVersion: v1
kind: Service
metadata:
  name: bi-jobs-service
  namespace: bold-services
  labels:
    app: bi-jobs
spec:
  type: NodePort
  ports:
  - name: bi-jobs-port
    port: 6006
    targetPort: 80
    protocol: TCP
  selector:
    app: bi-jobs
---
apiVersion: v1
kind: Service
metadata:
  name: bi-dataservice-service
  namespace: bold-services  
  labels:
    app: bi-dataservice
spec:
  type: NodePort
  ports:
  - name: bi-dataservice-port
    port: 6007
    targetPort: 80
    protocol: TCP
  selector:
    app: bi-dataservice
