deploy/auto-deployment/deploy_aks.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bold-services
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id-web-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: id-web
  replicas: 1
  template:
    metadata:
      labels:
        app: id-web
    spec:
      containers:
      - name: id-web-container
        image: us-docker.pkg.dev/boldbi-294612/boldbi/bold-identity:16.1.70
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: id-web-volume
        - mountPath: /application/idp/web/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: id-web-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id-api-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: id-api
  replicas: 1
  template:
    metadata:
      labels:
        app: id-api
    spec:
      containers:
      - name: id-api-container
        image: us-docker.pkg.dev/boldbi-294612/boldbi/bold-identity-api:16.1.70
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: id-api-volume
        - mountPath: /application/idp/api/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: id-api-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id-ums-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: id-ums
  replicas: 1
  template:
    metadata:
      labels:
        app: id-ums
    spec:
      containers:
      - name: id-ums-container
        image: us-docker.pkg.dev/boldbi-294612/boldbi/bold-ums:16.1.70
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: id-ums-volume
        - mountPath: /application/idp/ums/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: id-ums-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi-web-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: bi-web
  replicas: 1
  template:
    metadata:
      labels:
        app: bi-web
    spec:
      containers:
      - name: bi-web-container
        image: us-docker.pkg.dev/boldbi-294612/boldbi/boldbi-server:16.1.70
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: bi-web-volume
        - mountPath: /application/bi/web/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: bi-web-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi-api-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: bi-api
  replicas: 1
  template:
    metadata:
      labels:
        app: bi-api
    spec:
      containers:
      - name: bi-api-container
        image: us-docker.pkg.dev/boldbi-294612/boldbi/boldbi-server-api:16.1.70
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: bi-api-volume
        - mountPath: /application/bi/api/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: bi-api-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi-jobs-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: bi-jobs
  replicas: 1
  template:
    metadata:
      labels:
        app: bi-jobs
    spec:
      containers:
      - name: bi-jobs-container
        image: us-docker.pkg.dev/boldbi-294612/boldbi/boldbi-server-jobs:16.1.70
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: bi-jobs-volume
        - mountPath: /application/bi/jobs/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: bi-jobs-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bi-dataservice-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: bi-dataservice
  replicas: 1
  template:
    metadata:
      labels:
        app: bi-dataservice
    spec:
      containers:
      - name: bi-dataservice-container
        image: us-docker.pkg.dev/boldbi-294612/boldbi/boldbi-designer:16.1.70
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - mountPath: /application/app_data
          name: bi-dataservice-volume
        - mountPath: /application/bi/dataservice/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: bi-dataservice-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bold-etl-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: bold-etl
  replicas: 1
  template:
    metadata:
      labels:
        app: bold-etl
    spec:
      containers:
      - name: bold-etl-container
        image: us-docker.pkg.dev/boldbi-294612/boldbi/bold-etl:16.1.70
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /application/app_data
          name: bold-etl-volume
        - mountPath: /application/etl/etlservice/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: bold-etl-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bold-ai-deployment
  namespace: bold-services
spec:
  selector:
    matchLabels:
      app: bold-ai
  replicas: 1
  template:
    metadata:
      labels:
        app: bold-ai
    spec:
      imagePullSecrets:
        - name: dev-art-reg-key
      containers:
      - name: bold-ai-container
        image: us-docker.pkg.dev/boldbi-294612/boldbi/bold-ai:16.1.70
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 750Mi
        readinessProbe:
          httpGet:
            path: /health-check
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /application/app_data
          name: bold-ai-volume
        - mountPath: /application/ai/aiservice/logs/k8s
          name: log4net-config-volume
      volumes:
      - name: bold-ai-volume
        persistentVolumeClaim:
          claimName: bold-fileserver-claim
          readOnly: false
      - name: log4net-config-volume
        configMap:
          name: log4net-config
---
apiVersion: v1
kind: Service
metadata:
  name: id-web-service
  namespace: bold-services
  labels:
    app: id-web
spec:
  type: NodePort
  ports:
  - name: id-web-port
    port: 6000
    targetPort: 80
    protocol: TCP
  selector:
    app: id-web
---
apiVersion: v1
kind: Service
metadata:
  name: id-api-service
  namespace: bold-services
  labels:
    app: id-api
spec:
  type: NodePort
  ports:
  - name: id-api-port
    port: 6001
    targetPort: 80
    protocol: TCP
  selector:
    app: id-api
---
apiVersion: v1
kind: Service
metadata:
  name: id-ums-service
  namespace: bold-services
  labels:
    app: id-ums
spec:
  type: NodePort
  ports:
  - name: id-ums-port
    port: 6002
    targetPort: 80
    protocol: TCP
  selector:
    app: id-ums
---
apiVersion: v1
kind: Service
metadata:
  name: bi-web-service
  namespace: bold-services
  labels:
    app: bi-web
spec:
  type: NodePort
  ports:
  - name: bi-web-port
    port: 6004
    targetPort: 80
    protocol: TCP
  selector:
    app: bi-web
---
apiVersion: v1
kind: Service
metadata:
  name: bi-api-service
  namespace: bold-services
  labels:
    app: bi-api
spec:
  type: NodePort
  ports:
  - name: bi-api-port
    port: 6005
    targetPort: 80
    protocol: TCP
  selector:
    app: bi-api
---
apiVersion: v1
kind: Service
metadata:
  name: bi-jobs-service
  namespace: bold-services
  labels:
    app: bi-jobs
spec:
  type: NodePort
  ports:
  - name: bi-jobs-port
    port: 6006
    targetPort: 80
    protocol: TCP
  selector:
    app: bi-jobs
---
apiVersion: v1
kind: Service
metadata:
  name: bi-dataservice-service
  namespace: bold-services  
  labels:
    app: bi-dataservice
spec:
  type: NodePort
  ports:
  - name: bi-dataservice-port
    port: 6007
    targetPort: 80
    protocol: TCP
  selector:
    app: bi-dataservice
---
apiVersion: v1
kind: Service
metadata:
  name: bold-etl-service
  namespace: bold-services  
  labels:
    app: bold-etl
spec:
  type: ClusterIP
  ports:
  - name: bold-etl-port
    port: 6009
    targetPort: 80
    protocol: TCP
  selector:
    app: bold-etl
---
apiVersion: v1
kind: Service
metadata:
  name: bold-ai-service
  namespace: bold-services  
  labels:
    app: bold-ai
spec:
  type: ClusterIP
  ports:
  - name: bold-ai-port
    port: 6010
    targetPort: 8080
    protocol: TCP
  selector:
    app: bold-ai
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bold-ingress
  namespace: bold-services
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers: "4 256k"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 16k"
    nginx.ingress.kubernetes.io/fastcgi-buffers: "16 16k"
    nginx.ingress.kubernetes.io/fastcgi-buffer-size: "32k"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: "bold.k8s.pod.id"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/server-snippet: |      
      client_max_body_size 200m;
      set $bold_namespace "bold-services";
      
      location ~* "^/bi/api(/|$)(.*)" {
        set $namespace      $bold_namespace;
        set $ingress_name   "bold-ingress";
        set $service_name   "";
        set $service_port   "";
        set $location_path  "/biapi6005/bi/api(/|${literal_dollar})(.*)";
        rewrite_by_lua_block {
                lua_ingress.rewrite({
                        force_ssl_redirect = false,
                        ssl_redirect = true,
                        force_no_ssl_redirect = false,
                        use_port_in_redirects = false,
                })
                balancer.rewrite()
                plugins.run()
        }
        header_filter_by_lua_block {
                lua_ingress.header()
                plugins.run()
        }
        body_filter_by_lua_block {
        }
        log_by_lua_block {
                balancer.log()
                monitor.call()
                plugins.run()
        }
        port_in_redirect off;
        set $balancer_ewma_score -1;
        set $proxy_upstream_name "${bold_namespace}-bi-api-service-6005";
        set $proxy_host          $proxy_upstream_name;
        set $pass_access_scheme  $scheme;
        set $pass_server_port    $server_port;
        set $best_http_host      $http_host;
        set $pass_port           $pass_server_port;
        set $proxy_alternative_upstream_name "";
        proxy_set_header Host                   $best_http_host;
        proxy_set_header                        Upgrade           $http_upgrade;
        proxy_set_header                        Connection        $connection_upgrade;
        proxy_set_header X-Request-ID           $req_id;
        proxy_set_header X-Real-IP              $remote_addr;
        proxy_set_header X-Forwarded-For        $remote_addr;
        proxy_set_header X-Forwarded-Host       $best_http_host;
        proxy_set_header X-Forwarded-Port       $pass_port;
        proxy_set_header X-Forwarded-Proto      $pass_access_scheme;
        proxy_set_header X-Scheme               $pass_access_scheme;
        proxy_set_header X-Original-Forwarded-For $http_x_forwarded_for;
        proxy_set_header Proxy                  "";
        proxy_connect_timeout                   300s;
        proxy_send_timeout                      300s;
        proxy_read_timeout                      300s;
        proxy_buffering                         off;
        proxy_buffer_size                       4k;
        proxy_buffers                           4 4k;
        proxy_max_temp_file_size                1024m;
        proxy_request_buffering                 on;
        proxy_http_version                      1.1;
        proxy_cookie_domain                     off;
        proxy_cookie_path                       off;
        proxy_next_upstream                     error timeout;
        proxy_next_upstream_timeout             0;
        proxy_next_upstream_tries               3;
        rewrite "(?i)/biapi6005/bi/api(/|$)(.*)" /$2 break;
        proxy_pass http://upstream_balancer;
        proxy_redirect                          off;
      }
      
      location ~* "^/bi/jobs(/|$)(.*)" {
        set $namespace      $bold_namespace;
        set $ingress_name   "bold-ingress";
        set $service_name   "";
        set $service_port   "";
        set $location_path  "/bijobs6006/bi/jobs(/|${literal_dollar})(.*)";
        rewrite_by_lua_block {
                lua_ingress.rewrite({
                        force_ssl_redirect = false,
                        ssl_redirect = true,
                        force_no_ssl_redirect = false,
                        use_port_in_redirects = false,
                })
                balancer.rewrite()
                plugins.run()
        }
        header_filter_by_lua_block {
                lua_ingress.header()
                plugins.run()
        }
        body_filter_by_lua_block {
        }
        log_by_lua_block {
                balancer.log()
                monitor.call()
                plugins.run()
        }
        port_in_redirect off;
        set $balancer_ewma_score -1;
        set $proxy_upstream_name "${bold_namespace}-bi-jobs-service-6006";
        set $proxy_host          $proxy_upstream_name;
        set $pass_access_scheme  $scheme;
        set $pass_server_port    $server_port;
        set $best_http_host      $http_host;
        set $pass_port           $pass_server_port;
        set $proxy_alternative_upstream_name "";
        proxy_set_header Host                   $best_http_host;
        proxy_set_header                        Upgrade           $http_upgrade;
        proxy_set_header                        Connection        $connection_upgrade;
        proxy_set_header X-Request-ID           $req_id;
        proxy_set_header X-Real-IP              $remote_addr;
        proxy_set_header X-Forwarded-For        $remote_addr;
        proxy_set_header X-Forwarded-Host       $best_http_host;
        proxy_set_header X-Forwarded-Port       $pass_port;
        proxy_set_header X-Forwarded-Proto      $pass_access_scheme;
        proxy_set_header X-Scheme               $pass_access_scheme;
        proxy_set_header X-Original-Forwarded-For $http_x_forwarded_for;
        proxy_set_header Proxy                  "";
        proxy_connect_timeout                   300s;
        proxy_send_timeout                      300s;
        proxy_read_timeout                      300s;
        proxy_buffering                         off;
        proxy_buffer_size                       4k;
        proxy_buffers                           4 4k;
        proxy_max_temp_file_size                1024m;
        proxy_request_buffering                 on;
        proxy_http_version                      1.1;
        proxy_cookie_domain                     off;
        proxy_cookie_path                       off;
        proxy_next_upstream                     error timeout;
        proxy_next_upstream_timeout             0;
        proxy_next_upstream_tries               3;
        rewrite "(?i)/bijobs6006/bi/jobs(/|$)(.*)" /$2 break;
        proxy_pass http://upstream_balancer;
        proxy_redirect                          off;
      }
      
      location ~* "^/bi/designer(/|$)(.*)" {
        set $namespace      $bold_namespace;
        set $ingress_name   "bold-ingress";
        set $service_name   "";
        set $service_port   "";
        set $location_path  "/bidataservice6007(/|${literal_dollar})(.*)";
        rewrite_by_lua_block {
                lua_ingress.rewrite({
                        force_ssl_redirect = false,
                        ssl_redirect = true,
                        force_no_ssl_redirect = false,
                        use_port_in_redirects = false,
                })
                balancer.rewrite()
                plugins.run()
        }
        header_filter_by_lua_block {
                lua_ingress.header()
                plugins.run()
        }
        body_filter_by_lua_block {
        }
        log_by_lua_block {
                balancer.log()
                monitor.call()
                plugins.run()
        }
        port_in_redirect off;
        set $balancer_ewma_score -1;
        set $proxy_upstream_name "${bold_namespace}-bi-dataservice-service-6007";
        set $proxy_host          $proxy_upstream_name;
        set $pass_access_scheme  $scheme;
        set $pass_server_port    $server_port;
        set $best_http_host      $http_host;
        set $pass_port           $pass_server_port;
        set $proxy_alternative_upstream_name "";
        proxy_set_header Host                   $best_http_host;
        proxy_set_header                        Upgrade           $http_upgrade;
        proxy_set_header                        Connection        $connection_upgrade;
        proxy_set_header X-Request-ID           $req_id;
        proxy_set_header X-Real-IP              $remote_addr;
        proxy_set_header X-Forwarded-For        $remote_addr;
        proxy_set_header X-Forwarded-Host       $best_http_host;
        proxy_set_header X-Forwarded-Port       $pass_port;
        proxy_set_header X-Forwarded-Proto      $pass_access_scheme;
        proxy_set_header X-Scheme               $pass_access_scheme;
        proxy_set_header X-Original-Forwarded-For $http_x_forwarded_for;
        proxy_set_header Proxy                  "";
        proxy_connect_timeout                   300s;
        proxy_send_timeout                      300s;
        proxy_read_timeout                      300s;
        proxy_buffering                         off;
        proxy_buffer_size                       4k;
        proxy_buffers                           4 4k;
        proxy_max_temp_file_size                1024m;
        proxy_request_buffering                 on;
        proxy_http_version                      1.1;
        proxy_cookie_domain                     off;
        proxy_cookie_path                       off;
        proxy_next_upstream                     error timeout;
        proxy_next_upstream_timeout             0;
        proxy_next_upstream_tries               3;
        rewrite "(?i)/bidataservice6007(/|$)(.*)" /$2 break;
        proxy_pass http://upstream_balancer;
        proxy_redirect                          off;
      }

      location ~* "^/etlservice(/|$)(.*)" {
        set $namespace      $bold_namespace;
        set $ingress_name   "bold-ingress";
        set $service_name   "";
        set $service_port   "";
        set $location_path  "/etlservice(/|${literal_dollar})(.*)";
        rewrite_by_lua_block {
                lua_ingress.rewrite({
                        force_ssl_redirect = false,
                        ssl_redirect = true,
                        force_no_ssl_redirect = false,
                        use_port_in_redirects = false,
                })
                balancer.rewrite()
                plugins.run()
        }
        header_filter_by_lua_block {
                lua_ingress.header()
                plugins.run()
        }
        body_filter_by_lua_block {
        }
        log_by_lua_block {
                balancer.log()
                monitor.call()
                plugins.run()
        }
        port_in_redirect off;
        set $balancer_ewma_score -1;
        set $proxy_upstream_name "${bold_namespace}-bold-etl-service-6009";
        set $proxy_host          $proxy_upstream_name;
        set $pass_access_scheme  $scheme;
        set $pass_server_port    $server_port;
        set $best_http_host      $http_host;
        set $pass_port           $pass_server_port;
        set $proxy_alternative_upstream_name "";
        proxy_set_header Host                   $best_http_host;
        proxy_set_header                        Upgrade           $http_upgrade;
        proxy_set_header                        Connection        $connection_upgrade;
        proxy_set_header X-Request-ID           $req_id;
        proxy_set_header X-Real-IP              $remote_addr;
        proxy_set_header X-Forwarded-For        $remote_addr;
        proxy_set_header X-Forwarded-Host       $best_http_host;
        proxy_set_header X-Forwarded-Port       $pass_port;
        proxy_set_header X-Forwarded-Proto      $pass_access_scheme;
        proxy_set_header X-Scheme               $pass_access_scheme;
        proxy_set_header X-Original-Forwarded-For $http_x_forwarded_for;
        proxy_set_header Proxy                  "";
        proxy_connect_timeout                   300s;
        proxy_send_timeout                      300s;
        proxy_read_timeout                      300s;
        proxy_buffering                         off;
        proxy_buffer_size                       4k;
        proxy_buffers                           4 4k;
        proxy_max_temp_file_size                1024m;
        proxy_request_buffering                 on;
        proxy_http_version                      1.1;
        proxy_cookie_domain                     off;
        proxy_cookie_path                       off;
        proxy_next_upstream                     error timeout;
        proxy_next_upstream_timeout             0;
        proxy_next_upstream_tries               3;
        rewrite "(?i)/etlservice(/|$)(.*)" /$2 break;
        proxy_pass http://upstream_balancer;
        proxy_redirect                          off;
      }

      location ~* "^/bi(/|$)(.*)" {
        set $namespace      $bold_namespace;
        set $ingress_name   "bold-ingress";
        set $service_name   "";
        set $service_port   "";
        set $location_path  "/biweb6004/bi(/|${literal_dollar})(.*)";
        rewrite_by_lua_block {
                lua_ingress.rewrite({
                        force_ssl_redirect = false,
                        ssl_redirect = true,
                        force_no_ssl_redirect = false,
                        use_port_in_redirects = false,
                })
                balancer.rewrite()
                plugins.run()
        }
        header_filter_by_lua_block {
                lua_ingress.header()
                plugins.run()
        }
        body_filter_by_lua_block {
        }
        log_by_lua_block {
                balancer.log()
                monitor.call()
                plugins.run()
        }
        port_in_redirect off;
        set $balancer_ewma_score -1;
        set $proxy_upstream_name "${bold_namespace}-bi-web-service-6004";
        set $proxy_host          $proxy_upstream_name;
        set $pass_access_scheme  $scheme;
        set $pass_server_port    $server_port;
        set $best_http_host      $http_host;
        set $pass_port           $pass_server_port;
        set $proxy_alternative_upstream_name "";
        proxy_set_header Host                   $best_http_host;
        proxy_set_header                        Upgrade           $http_upgrade;
        proxy_set_header                        Connection        $connection_upgrade;
        proxy_set_header X-Request-ID           $req_id;
        proxy_set_header X-Real-IP              $remote_addr;
        proxy_set_header X-Forwarded-For        $remote_addr;
        proxy_set_header X-Forwarded-Host       $best_http_host;
        proxy_set_header X-Forwarded-Port       $pass_port;
        proxy_set_header X-Forwarded-Proto      $pass_access_scheme;
        proxy_set_header X-Scheme               $pass_access_scheme;
        proxy_set_header X-Original-Forwarded-For $http_x_forwarded_for;
        proxy_set_header Proxy                  "";
        proxy_connect_timeout                   300s;
        proxy_send_timeout                      300s;
        proxy_read_timeout                      300s;
        proxy_buffering                         off;
        proxy_buffer_size                       4k;
        proxy_buffers                           4 4k;
        proxy_max_temp_file_size                1024m;
        proxy_request_buffering                 on;
        proxy_http_version                      1.1;
        proxy_cookie_domain                     off;
        proxy_cookie_path                       off;
        proxy_next_upstream                     error timeout;
        proxy_next_upstream_timeout             0;
        proxy_next_upstream_tries               3;
        rewrite "(?i)/biweb6004/bi(/|$)(.*)" /$2 break;
        proxy_pass http://upstream_balancer;
        proxy_redirect                          off;        
      }
      
      location ~* "^/api(/|$)(.*)" {
        set $namespace      $bold_namespace;
        set $ingress_name   "bold-ingress";
        set $service_name   "";
        set $service_port   "";
        set $location_path  "/idapi6001/api(/|${literal_dollar})(.*)";
        rewrite_by_lua_block {
                lua_ingress.rewrite({
                        force_ssl_redirect = false,
                        ssl_redirect = true,
                        force_no_ssl_redirect = false,
                        use_port_in_redirects = false,
                })
                balancer.rewrite()
                plugins.run()
        }
        header_filter_by_lua_block {
                lua_ingress.header()
                plugins.run()
        }
        body_filter_by_lua_block {
        }
        log_by_lua_block {
                balancer.log()
                monitor.call()
                plugins.run()
        }
        port_in_redirect off;
        set $balancer_ewma_score -1;
        set $proxy_upstream_name "${bold_namespace}-id-api-service-6001";
        set $proxy_host          $proxy_upstream_name;
        set $pass_access_scheme  $scheme;
        set $pass_server_port    $server_port;
        set $best_http_host      $http_host;
        set $pass_port           $pass_server_port;
        set $proxy_alternative_upstream_name "";
        proxy_set_header Host                   $best_http_host;
        proxy_set_header                        Upgrade           $http_upgrade;
        proxy_set_header                        Connection        $connection_upgrade;
        proxy_set_header X-Request-ID           $req_id;
        proxy_set_header X-Real-IP              $remote_addr;
        proxy_set_header X-Forwarded-For        $remote_addr;
        proxy_set_header X-Forwarded-Host       $best_http_host;
        proxy_set_header X-Forwarded-Port       $pass_port;
        proxy_set_header X-Forwarded-Proto      $pass_access_scheme;
        proxy_set_header X-Scheme               $pass_access_scheme;
        proxy_set_header X-Original-Forwarded-For $http_x_forwarded_for;
        proxy_set_header Proxy                  "";
        proxy_connect_timeout                   300s;
        proxy_send_timeout                      300s;
        proxy_read_timeout                      300s;
        proxy_buffering                         off;
        proxy_buffer_size                       4k;
        proxy_buffers                           4 4k;
        proxy_max_temp_file_size                1024m;
        proxy_request_buffering                 on;
        proxy_http_version                      1.1;
        proxy_cookie_domain                     off;
        proxy_cookie_path                       off;
        proxy_next_upstream                     error timeout;
        proxy_next_upstream_timeout             0;
        proxy_next_upstream_tries               3;
        rewrite "(?i)/idapi6001/api(/|$)(.*)" /$2 break;
        proxy_pass http://upstream_balancer;
        proxy_redirect                          off;
      }
      
      location ~* "^/ums(/|$)(.*)" {
        set $namespace      $bold_namespace;
        set $ingress_name   "bold-ingress";
        set $service_name   "";
        set $service_port   "";
        set $location_path  "/idums6002/ums(/|${literal_dollar})(.*)";
        rewrite_by_lua_block {
                lua_ingress.rewrite({
                        force_ssl_redirect = false,
                        ssl_redirect = true,
                        force_no_ssl_redirect = false,
                        use_port_in_redirects = false,
                })
                balancer.rewrite()
                plugins.run()
        }
        header_filter_by_lua_block {
                lua_ingress.header()
                plugins.run()
        }
        body_filter_by_lua_block {
        }
        log_by_lua_block {
                balancer.log()
                monitor.call()
                plugins.run()
        }
        port_in_redirect off;
        set $balancer_ewma_score -1;
        set $proxy_upstream_name "${bold_namespace}-id-ums-service-6002";
        set $proxy_host          $proxy_upstream_name;
        set $pass_access_scheme  $scheme;
        set $pass_server_port    $server_port;
        set $best_http_host      $http_host;
        set $pass_port           $pass_server_port;
        set $proxy_alternative_upstream_name "";
        proxy_set_header Host                   $best_http_host;
        proxy_set_header                        Upgrade           $http_upgrade;
        proxy_set_header                        Connection        $connection_upgrade;
        proxy_set_header X-Request-ID           $req_id;
        proxy_set_header X-Real-IP              $remote_addr;
        proxy_set_header X-Forwarded-For        $remote_addr;
        proxy_set_header X-Forwarded-Host       $best_http_host;
        proxy_set_header X-Forwarded-Port       $pass_port;
        proxy_set_header X-Forwarded-Proto      $pass_access_scheme;
        proxy_set_header X-Scheme               $pass_access_scheme;
        proxy_set_header X-Original-Forwarded-For $http_x_forwarded_for;
        proxy_set_header Proxy                  "";
        proxy_connect_timeout                   300s;
        proxy_send_timeout                      300s;
        proxy_read_timeout                      300s;
        proxy_buffering                         off;
        proxy_buffer_size                       4k;
        proxy_buffers                           4 4k;
        proxy_max_temp_file_size                1024m;
        proxy_request_buffering                 on;
        proxy_http_version                      1.1;
        proxy_cookie_domain                     off;
        proxy_cookie_path                       off;
        proxy_next_upstream                     error timeout;
        proxy_next_upstream_timeout             0;
        proxy_next_upstream_tries               3;
        rewrite "(?i)/idums6002/ums(/|$)(.*)" /$2 break;
        proxy_pass http://upstream_balancer;
        proxy_redirect                          off;
      }
      location ~* "^/aiservice(/|$)(.*)" {
        set $namespace      $bold_namespace;
        set $ingress_name   "bold-ingress";
        set $service_name   "";
        set $service_port   "";
        set $location_path  "/aiservice(/|${literal_dollar})(.*)";
        rewrite_by_lua_block {
                lua_ingress.rewrite({
                        force_ssl_redirect = false,
                        ssl_redirect = true,
                        force_no_ssl_redirect = false,
                        use_port_in_redirects = false,
                })
                balancer.rewrite()
                plugins.run()
        }
        header_filter_by_lua_block {
                lua_ingress.header()
                plugins.run()
        }
        body_filter_by_lua_block {
        }
        log_by_lua_block {
                balancer.log()
                monitor.call()
                plugins.run()
        }
        port_in_redirect off;
        set $balancer_ewma_score -1;
        set $proxy_upstream_name "${bold_namespace}-bold-ai-service-6010";
        set $proxy_host          $proxy_upstream_name;
        set $pass_access_scheme  $scheme;
        set $pass_server_port    $server_port;
        set $best_http_host      $http_host;
        set $pass_port           $pass_server_port;
        set $proxy_alternative_upstream_name "";
        proxy_set_header Host                   $best_http_host;
        proxy_set_header                        Upgrade           $http_upgrade;
        proxy_set_header                        Connection        $connection_upgrade;
        proxy_set_header X-Request-ID           $req_id;
        proxy_set_header X-Real-IP              $remote_addr;
        proxy_set_header X-Forwarded-For        $remote_addr;
        proxy_set_header X-Forwarded-Host       $best_http_host;
        proxy_set_header X-Forwarded-Port       $pass_port;
        proxy_set_header X-Forwarded-Proto      $pass_access_scheme;
        proxy_set_header X-Scheme               $pass_access_scheme;
        proxy_set_header X-Original-Forwarded-For $http_x_forwarded_for;
        proxy_set_header Proxy                  "";
        proxy_connect_timeout                   300s;
        proxy_send_timeout                      300s;
        proxy_read_timeout                      300s;
        proxy_buffering                         off;
        proxy_buffer_size                       4k;
        proxy_buffers                           4 4k;
        proxy_max_temp_file_size                1024m;
        proxy_request_buffering                 on;
        proxy_http_version                      1.1;
        proxy_cookie_domain                     off;
        proxy_cookie_path                       off;
        proxy_next_upstream                     error timeout;
        proxy_next_upstream_timeout             0;
        proxy_next_upstream_tries               3;
        rewrite "(?i)/aiservice(/|$)(.*)" /$2 break;
        proxy_pass http://upstream_balancer;
        proxy_redirect                          off;
      }
spec:
  #tls:
  #- hosts:
    #- example.com
    #secretName: bold-tls
  rules:
  - #host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: id-web-service
            port:
              number: 6000       
      - path: /idapi6001(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: id-api-service
            port:
              number: 6001
      - path: /idums6002(/|$)(.*)
        pathType: Prefix     
        backend:
          service:
            name: id-ums-service
            port:
              number: 6002      
      - path: /biweb6004(/|$)(.*)
        pathType: Prefix      
        backend:
          service:
            name: bi-web-service
            port:
              number: 6004     
      - path: /biapi6005(/|$)(.*)
        pathType: Prefix     
        backend:
          service:
            name: bi-api-service
            port:
              number: 6005         
      - path: /bijobs6006(/|$)(.*)
        pathType: Prefix      
        backend:
          service:
            name: bi-jobs-service
            port:
              number: 6006      
      - path: /bidataservice6007(/|$)(.*)
        pathType: Prefix      
        backend:
          service:
            name: bi-dataservice-service
            port:
              number: 6007
      - path: /boldetl/(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: bold-etl-service
            port:
              number: 6009
      - path: /aiservice(/|$)(.*)
        pathType: Prefix      
        backend:
          service:
            name: bold-ai-service
            port:
              number: 6010
